--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,7 @@ jobs:
         run: echo "Pushing the docker image"
   deploy:
     runs-on: ubuntu-latest
+    needs: build
     steps:
-      - name: Build the application
+      - name: Deploy the application
         run: echo "Deploying in $ENVIRONMENT"  
